* js/info.css (div.toc-sidebar): Specify "width: 100%" to prevent the scroll bar potentially occurring only half-way across the width of the sidebar TOC, which would happen if there were only short section titles which didn't need to wrap across lines.

--- a/js/info.css
+++ b/js/info.css
@@ -118,6 +118,7 @@ div.toc-sidebar {
     position: absolute;
     top: 0px;
     overflow: auto;
+    width: 100%;
 }
 
 div.toc-sidebar header {
